made final adjustments, fixed nav bar alignment and header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,7 +282,7 @@ nav a{
 
   }
     #masthead {
-      position: static;
+      position: relative;
       z-index: 99;
       width: 100%;
       margin: 0 0 30px;
@@ -294,7 +294,7 @@ nav a{
     
     #logo {
       float: left;
-      width: 400px;
+      width: 345px;
       height: 90px;
       font-family: Georgia, Times, "Times New Roman", serif;
       font-size: 30px;
@@ -304,6 +304,7 @@ nav a{
       text-align: center;
       text-decoration: none;
       background: #4aaaa5;
+    
     }
     
     nav {
@@ -332,8 +333,8 @@ nav a{
     }
     
 
-    /* a{
-    width:640px;
-    text-align: center;
-    } */
+    a{
+    width:100px;
+
+    }
 }
